# hackathon-nvidia-gtc-25

./: .env.example  .gitignore  ARCHITECTURE.md  CHEAT_SHEET.md  DEMO.md  DEMO_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MODEL_ALIGNMENT.md  MVP_GAPS_ANALYSIS.md  QUICK_START.md  README.md  ROADMAP.md  SETUP_CHECKLIST.md  START_HERE.md  STATUS.md  TESTING_GUIDE.md  TESTING_STATUS.md  app.py  app_enhanced.py  app_original_backup.py  check_available_models.py  env.example  master-task-list.md  pyproject.toml  requirements.txt  test_components.py  test_safety_react.py  test_system.py
.cursor/rules/: erik-check-project-rules.mdc
backend/: __init__.py  main.py
backend/api/: __init__.py  chat.py  data.py  system.py
backend/models/: schemas.py
backend/services/: workflow.py
data/: insights_cache.json  sample_lifelog.csv
docs/: langgraph-agent-diagram.md  project-diagram.md  project-outline.md
erik/: judging-criteria.md  nemotron-prize-track.md  project-diagram.md  project-resources.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/Chat/: ChatMessage.tsx  ReasoningSteps.tsx  SafetyReport.tsx  SimpleStreamingChat.tsx
frontend/src/components/DataInsights/: CategoryChart.tsx  CorrelationHeatmap.tsx  RecentEntries.tsx  SummaryCards.tsx  TimelineChart.tsx
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx  TabLayout.tsx
frontend/src/components/SystemInfo/: AgentDescriptions.tsx  Architecture.tsx  TechStack.tsx
frontend/src/hooks/: useStreamingChat.ts
frontend/src/services/: api.ts
frontend/src/store/: chatStore.ts
frontend/src/types/: index.ts
src/: __init__.py  agentic_workflow.py  agents.py  background_agents.py  data_store.py  insights_cache.py  nvidia_embeddings.py
