[project]
name = "agentic-lifelog"
version = "0.1.0"
description = "Agentic Lifelog - Personal Intelligence Platform for NVIDIA GTC 25 Hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-nvidia-ai-endpoints>=0.0.11",
    "langgraph>=0.0.20",
    "streamlit>=1.29.0",
    "chromadb>=0.4.22",
    "pandas>=2.1.4",
    "python-dotenv>=1.0.0",
    "openai>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

